--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
@@ -130,7 +130,7 @@
 
                                 if (permisos_usuario.verificar_permiso("SC-01234", 0, IdPermiso.VER_SECCIONES))
                                 {
-                                    <li>@Html.ActionLink("Sección", "Index", "Seccion")</li>
+                                    <li>@Html.ActionLink("Ver Sección", "Index", "Seccion")</li>
                                 }
                                 else
                                 {
@@ -139,7 +139,7 @@
 
                                 if (permisos_usuario.verificar_permiso("SC-01234", 0, IdPermiso.VER_ITEMS))
                                 {
-                                    <li>@Html.ActionLink("Ítem", "Index", "Item")</li>
+                                    <li>@Html.ActionLink("Ver Ítem", "Index", "Item")</li>
                                 }
                                 else
                                 {
