Terminando el cambiar contraseña.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/Auth/BarraLogin.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/Auth/BarraLogin.cshtml
@@ -32,7 +32,7 @@
 
 <br /><br /><br />
 
-@if (ViewBag.Title != "Recuperar contraseña" && ViewBag.Title != "Inicio de sesión")
+@if (ViewBag.Title != "Recuperar contraseña" && ViewBag.Title != "Inicio de sesión" && ViewBag.Title != "Cambiar contraseña")
 {
     // Si es otra pantalla que no sea recuperar contrasenna o inicio de sesion, se agregan dos espacios
     // ya que esta la barra gris.
