--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Auth/Recuperar.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Auth/Recuperar.cshtml
@@ -2,12 +2,12 @@
     ViewBag.Title = "Recuperar contraseña";
 }
 
-<div align="center">
+<div align="center" style="padding-right:100px">
     @using (Html.BeginForm("Recuperar", "Auth", FormMethod.Post))
     {
         <div class="login-container">
             <div class="row">
-                <div class="col-md-3 col-md-offset-4">
+                <div class="col-md-4 col-md-offset-4">
                     <h1>Opiniómetro@UCR</h1>
                     <div class="panel panel-default">
                         <h3>Recuperar contraseña</h3>
