Continuación de validación en vista.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Admin/Editar.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Admin/Editar.cshtml
@@ -4,6 +4,11 @@
     ViewBag.Title = "Index";
 }
 
+@* Inclusiones necesarias para poder hacer validaciones *@
+<link href="~/Content/Site.css" rel="stylesheet" />
+<script src="~/Scripts/jquery-3.3.1.min.js"></script>
+<script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
 
 <!--Login-->
 <div align="center">
