--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/FormularioCurso/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/FormularioCurso/Index.cshtml
@@ -32,10 +32,10 @@
         {
             <div id="preguntaTextoLibre">
             </div>
-            
+
 
             <script type="text/javascript">
-                crearElemento("campoTexto", contTextoLibre, "@dato.item" , "preguntaTextoLibre");
+                crearElemento("campoTexto", contTextoLibre, @Html.Raw(Json.Encode(dato.item)) , "preguntaTextoLibre");
                 insertNueLinea("campoTexto".concat(contTextoLibre));
                 TextoLibre(contTextoLibre);
                 lineaHor("campoTexto".concat(contTextoLibre));
@@ -45,17 +45,17 @@
 
         if (dato.tipoPregunta == 2)
         {
-            <div id="preguntaSelUnica">
-                @Html.Action("ObtenerOpcionesSelUnica", "FormularioCurso", new { id = dato.itemId, texto = dato.item, obs = dato.tieneObservacion, tipo = dato.tipoPregunta });
-            </div>
-
             <script>
-                crearElemento("selUnica", contSelUnica, "@dato.item", "preguntaSelUnica");
+                crearElemento("selUnica", contSelUnica, @Html.Raw(Json.Encode(dato.item)), "preguntaSelUnica");
                 insertNueLinea("selUnica".concat(contSelUnica));
                 seleccionUnica(contSelUnica/*,listaOpciones*/);
                 lineaHor("selUnica".concat(contSelUnica));
                 contSelUnica++;
             </script>
+
+            <div id="preguntaSelUnica">
+                @Html.Action("ObtenerOpcionesSelUnica", "FormularioCurso", new { id = dato.itemId, texto = dato.item, obs = dato.tieneObservacion, tipo = dato.tipoPregunta });
+            </div>
 
             //Campo de observacion de la opcion de seleccion unica
             @*if (dato.tieneObservacion == true) {
@@ -70,7 +70,7 @@
             <div id="preguntaSiNo"> </div>
 
             <script>
-                crearElemento("SiNo", contSiNo, "@dato.item", "preguntaSiNo");
+                crearElemento("SiNo", contSiNo, @Html.Raw(Json.Encode(dato.item)), "preguntaSiNo");
                 insertNueLinea("SiNo".concat(contSiNo));
                 RespondeSiNo(contSiNo);
                 lineaHor("SiNo".concat(contSiNo));
