--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Administrador/Editar.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Administrador/Editar.cshtml
@@ -104,7 +104,7 @@
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-3">
                     <input type="submit" value="Guardar" class="btn btn-default" />
-                    @Html.ActionLink("Cancelar", "VerPersonas", "Admin", "", new { @class = "btn btn-default" })
+                    @Html.ActionLink("Cancelar", "VerPersonas", "Administrador", "", new { @class = "btn btn-default" })
                 </div>
             </div>
         </div>
