--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
@@ -68,7 +68,7 @@
                             @{
                                 if (permisos_usuario.verificar_permiso("SC-01234", 0, IdPermiso.VER_INFORMACION_PERSONAS))
                                 {
-                                    <li>@Html.ActionLink("Ver información de personas", "VerPersonas", "Admin")</li>
+                                    <li>@Html.ActionLink("Ver información de personas", "VerPersonas", "Administrador")</li>
                                 }
                                 else
                                 {
@@ -77,7 +77,7 @@
 
                                 if (permisos_usuario.verificar_permiso("SC-01234", 0, IdPermiso.INSERTAR_USUARIO))
                                 {
-                                    <li>@Html.ActionLink("Insertar usuario", "CrearUsuario", "Admin")</li>
+                                    <li>@Html.ActionLink("Insertar usuario", "CrearUsuario", "Administrador")</li>
                                 }
                                 else
                                 {
