--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/FormularioCurso/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/FormularioCurso/Index.cshtml
@@ -54,7 +54,7 @@
             </script>
 
             <div id="preguntaSelUnica">
-                @Html.Action("ObtenerOpcionesSelUnica", "FormularioCurso", new { id = dato.itemId, texto = dato.item, obs = dato.tieneObservacion, tipo = dato.tipoPregunta });
+                @Html.Action("ObtenerOpcionesSelUnica", "FormularioCurso", new { id = dato.itemId })
             </div>
 
             //Campo de observacion de la opcion de seleccion unica
