Cambios debido a sugerencias del PO

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Enfasis/VerEnfasis.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Enfasis/VerEnfasis.cshtml
@@ -17,11 +17,7 @@
         </th>
 
         <th>
-            Sigla de Carrera
-        </th>
-
-        <th>
-            Numero de Enfasis
+            Codigo de Carrera
         </th>
         <th></th>
     </tr>
@@ -39,10 +35,6 @@
 
             <td>
                 @item.carrera.Sigla
-            </td>
-
-            <td>
-                @item.enfasis.Numero
             </td>
         </tr>
     }
