Se agrega el boton de copiar

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
@@ -169,7 +169,7 @@
     </div>
 </div>
 
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalCopiarSeccion">
+<button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#modalCopiarSeccion">
     Copiar Secciones
 </button>
 
@@ -186,13 +186,14 @@
                 @Html.Partial("AsignarSecciones")
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Copiar</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
             </div>
         </div>
     </div>
 </div>
 
- <button id ="VistaPrevia" type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalVistaPrevia">
+ <button id ="VistaPrevia" type="button" class="btn btn-secondary" data-toggle="modal" data-target="#modalVistaPrevia">
     Vista Previa
 </button>
 
