--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/EliminarSeccion.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/EliminarSeccion.cshtml
@@ -1,5 +1,5 @@
 ﻿@model Opiniometro_WebApp.Models.Conformado_For_Sec 
-
+    
 
 @{
     /**/
@@ -22,44 +22,73 @@
 
 <div class="form-horizontal">
     <hr />
+    <div class="form-group">
+        @Html.Label("Código del formulario:", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(model => model.CodigoFormulario, new { disabled = "disabled" })
+
+        </div>
+    </div>
 
 
     @* Dropdown list para que el usuario escoja la sección del formulario que desea eliminar *@
     <div class="form-group">
         @Html.LabelFor(model => model.TituloSeccion, "Título de la sección a eliminar", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownListFor(model => model.TituloSeccion, new SelectList(ViewBag.TituloSeccion, "Value", "Text"), "Seleccione")
+            @*@Html.DropDownListFor(model => model.TituloSeccion, new SelectList(ViewBag.TituloSeccion, "Value", "Text"), "Seleccione")*@
+            @Html.DropDownListFor(model => model.TituloSeccion,
+            new SelectList(ViewBag.TituloSeccion, "Value", "Text"), "Seleccione", htmlAttributes: new { @class = "form-control", id = "dropdownlistTitulos",
+            placeholder = "TituloSeccion", data_width = "100%", onchange = "eliminarSec(this.value)"})
+            
             @Html.ValidationMessageFor(model => model.TituloSeccion, "", new { @class = "text-danger" })
         </div>
     </div>
 
 
-    <div class="form-group">
-        @Html.Label("Código del formulario:", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(model => model.CodigoFormulario, new { disabled = "disabled" })
-          
-        </div>
-    </div>
+
 
     <td>
-        @Html.ActionLink("Eliminar Sección", "EliminarSeccion", "EliminarSeccion", new { }, new { @class = "btn btn-default" })
-        @Html.ActionLink("Cancelar", "Index", "Formulario", new { }, new { @class="btn btn-default"})
+        <button id="btnEliminar" class="btn btn-secondary m-*-auto"><span class="oi oi-arrow-left"></span> Eliminar Sección</button>
+        @Html.ActionLink("Cancelar", "Index", "Formulario", new { }, new { @class = "btn btn-default" })
     </td>
+
 
     <script>
 
         /*aqui se codifican las acciones al darle click a los botones especificos*/
 
-        function accionBotonEliminarSeccion() {
-    
-        }
+        $(document).ready(function eliminarSec() {
+            $("#btnEliminar").click(function () {
+            $.ajax({
+                type: "POST",
+                url: "CrearFormulario", // the URL of the controller action method
+                data: { //pasando informacion
+                   @*CodigoFormulario: @Html.Raw(Json.Encode(Model.CodigoFormulario)),
+                    TituloSeccion: @Html.Raw(Json.Encode(Model.TituloSeccion))*@
+                },
+                success: function (result) {
+                    // lo que se hace con el resultado
+                    if (result) {
+                        alert("Se eliminó la sección " + $("input:radio[name=seccion]:checked").val())
+                    }
+                    else
+                    {
+                        alert("No se eliminó la sección ") + $("input:radio[name=seccion]:checked").val()
+                    }
+                },
+                error: function () {
+                    alert("No se eliminó la sección ") + $("input:radio[name=seccion]:checked").val()
+                }
+            });
+            });
+        });
+
 
         function accionBotonCancelar() {
             document.location = '@Url.Action("Index", "Formulario")';
         }
 
-        </script>
+    </script>
 
 </div>
 
