--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/AsignacionFormularioGrupo.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/AsignacionFormularioGrupo.cshtml
@@ -74,12 +74,11 @@
                     </td>
                     <td align="left">
                         <span>Inicio: </span>
-                        
-                        <input type="datetime-local" @*style="width: 20vw;"*@ textmode="Date" class="hasDatepicker fecha-inicial" />
+                        <input type="datetime-local" textmode="Date" class="hasDatepicker fecha-inicial" required />
 
                         <span> Fin: </span>
+                        <input type="datetime-local" textmode="Date" class="hasDatepicker fecha-final" required />
 
-                        <input type="datetime-local" @*style="width: 150px;"*@ textmode="Date" class="hasDatepicker fecha-final" />
 
                         <br />
                     </td>
