Pop ups para mejorar la experiencia de usuario al crear y borrar perfiles.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Perfil/Borrar.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Perfil/Borrar.cshtml
@@ -41,4 +41,6 @@
     </table>
     <input type="submit" value="Borrar" class="btn btn-default" />
     @Html.ActionLink("Cancelar", "Index", "Home", null, new { @class = "btn btn-default" })
+
+    @Html.Raw(TempData["msg"])
 }
