Más guía para el usuario para asignar formularios.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/AsignacionFormularioGrupo.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/AsignacionFormularioGrupo.cshtml
@@ -74,10 +74,10 @@
                     </td>
                     <td align="left">
                         <span>Inicio: </span>
-                        <input type="datetime-local" textmode="Date" class="hasDatepicker fecha-inicial" required />
+                        <input type="datetime-local" textmode="Date" class="hasDatepicker fecha-inicial" value="yyyy-MM-ddT00:00" required/>
 
                         <span> Fin: </span>
-                        <input type="datetime-local" textmode="Date" class="hasDatepicker fecha-final" required />
+                        <input type="datetime-local" textmode="Date" class="hasDatepicker fecha-final" value="yyyy-MM-ddT00:00" required />
 
 
                         <br />
