Cambios en la vista previa de los items para que pueda haber una vista de selección única. Se agregaron imágenes más grandes para el índice de la vista previa luego de las pruebas de usabilidad del día de ayer.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Index.cshtml
@@ -31,7 +31,7 @@
             @*@Html.DisplayNameFor(model => model.First().TieneObservacion)*@
         </th>
         <th>
-            Adicionales
+            Vista Previa
         </th>
     </tr>
 
