--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Perfil/Editar.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Perfil/Editar.cshtml
@@ -4,68 +4,69 @@
     ViewBag.Title = "Editar";
 }
 
+@* Inclusiones necesarias para poder hacer validaciones *@
+<link href="~/Content/Site.css" rel="stylesheet" />
+<script src="~/Scripts/jquery-3.3.1.min.js"></script>
+<script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+
 <h2>Editar</h2>
 
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Perfil</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Nombre)
 
-         @if (Model.Nombre != "Administrador")
-         {
-        <div class="form-group">
-            
-            <div class="col-md-10">
-
-                @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
- 
-            </div>
-            </div>
-         }
-         else
-         {
+        @if (Model.Nombre != "Administrador")
+        {
             <div class="form-group">
-         
-                    <dl class="dl-horizontal">
-                        <dt>
-                        @Html.LabelFor(model => model.Nombre)
-                            </dt>
-                        <dd>
-                            <div style="margin-left:35px">
-                            @Html.DisplayFor(model => model.Nombre)
-                                </div>
-                        </dd>
-                        </dl>
-            </div>
+                @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
 
+                    @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
 
-
-                }
-
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Descripcion, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Descripcion, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <br />
-                <br />
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Guardar" class="btn btn-default" />
-                        @Html.ActionLink("Cancelar", "VerPerfiles", "Perfil", "", new { @class = "btn btn-default" })
-                    </div>
                 </div>
             </div>
-         }
+        }
+        else
+        {
+            <div class="form-group">
+
+                <div>
+                        @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "control-label col-md-2" })
+                    </div>
+                <div class="col-md-10">
+                    @Html.DisplayFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
+                </div>
+
+                </div>
+
+        }
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Descripcion, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Descripcion, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <br />
+        <br />
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Guardar" class="btn btn-default" />
+                @Html.ActionLink("Cancelar", "VerPerfiles", "Perfil", "", new { @class = "btn btn-default" })
+            </div>
+        </div>
+    </div>
+}
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
